--- a/Home.html
+++ b/Home.html
@@ -53,7 +53,7 @@
                               </ul>
                             </div>
                             <div class="row">
-                              <header>Social Content</header>
+                              <header>Social Media Content</header>
                               <ul class="mega-links">
                                 <li><a href="#">Instagram feeds</a></li>
                                 <li><a href="#">Pintrest boards</a></li>
